src/test/deca/context/invalid/langage_essentiel/troisieme_passe/regle_3_42.deca
// Description:
//    regle 3.42, condition
//
// Resultats:
//    Ligne 7: 'int' is not a class.
{
    int a = new int();
}